<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|right"
    tools:context=".MainActivity"
    tools:ignore="RtlHardcoded">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="229dp"
        android:layout_height="31dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_amount_in_dollars"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="415dp"
        android:layout_height="81dp"
        android:layout_marginBottom="25dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/rupee_dollar"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="31dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="156dp"
        android:layout_marginRight="156dp"
        android:layout_marginBottom="25dp"
        android:text="@string/enter_amount_in_rupees"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="casual"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="25dp"
        android:background="#3F51B5"
        android:onClick="rupeeToDollar"
        android:text="@string/convert_to_dollars"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="17dp"
        android:background="#3F51B5"
        android:onClick="dollarToRupee"
        android:text="@string/convert_to_rupees"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="0.00"
        android:inputType="textPersonName"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="0.00"
        android:inputType="textPersonName"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="269dp"
        android:layout_height="136dp"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/dollarrupee" />

</androidx.constraintlayout.widget.ConstraintLayout>